# personal-finance-system

./: .gitignore  README.md  README_v2.md  app.py  pyproject.toml  requirements.txt  setup.py
database/: db.py  init_db.py  models.py
docs/: phase-1.md  phase-2.md
import_pipeline/: categorizer.py  csv_processor.py  exchange_rates.py  import_transactions.py  migrate_historical.py
pages/: analytics.py  budgets.py  home.py  import_page.py  savings.py  settings.py  transactions.py
