[project]
name = "personal-finance-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash==2.18.1",
    "dash-ag-grid==31.2.0",
    "dash-bootstrap-components==1.6.0",
    "duckdb==1.1.3",
    "ipython>=9.7.0",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "plotly==5.24.1",
    "python-dateutil==2.9.0",
    "reportlab==4.2.5",
    "requests==2.32.3",
]
